Actions
Bug #15447
closedRaising an exception with non-exception cause breaks backtrace printer
Bug #15447:
Raising an exception with non-exception cause breaks backtrace printer
Actions
Added by mame (Yusuke Endoh) over 7 years ago. Updated over 7 years ago.
Applied in changeset trunk|r66475.
eval_error.c (show_cause): check if cause is an Exception or not
Fixes [Bug #15447]